--- a/clase-2/Clase2.IntroMVC/Clase2.IntroMVC.Web/Views/Shared/_Layout.cshtml
+++ b/clase-2/Clase2.IntroMVC/Clase2.IntroMVC.Web/Views/Shared/_Layout.cshtml
@@ -25,6 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Series" asp-action="Agregar">Agregar Serie</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Peliculas" asp-action="Listado">Películas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Peliculas" asp-action="Agregar">Agregar Película</a>
+                        </li>
                     </ul>
                 </div>
             </div>
