refactor: utilizando interfaz IEstaEnPlataforma para plataformapartial

--- a/clase-2/Clase2.IntroMVC/Clase2.IntroMVC.Web/Views/Shared/_PlataformaPartial.cshtml
+++ b/clase-2/Clase2.IntroMVC/Clase2.IntroMVC.Web/Views/Shared/_PlataformaPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model Clase2.IntroMVC.Entidades.Pelicula
+﻿@model Clase2.IntroMVC.Entidades.IEstaEnPlataforma
 
 @if (Model.EstaEnHBO ?? false)
 {
