--- a/clase-3/Clase3.LayoutsValidaciones/Clase3.LayoutsValidaciones.Web/Views/Shared/_Layout.cshtml
+++ b/clase-3/Clase3.LayoutsValidaciones/Clase3.LayoutsValidaciones.Web/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Encuestas" asp-action="Index">Encuestas</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Encuestas" asp-action="EnviarRespuesta">Enviar Respuesta</a>
+                        </li>
                     </ul>
                 </div>
             </div>
